--- a/conferences.html
+++ b/conferences.html
@@ -75,7 +75,7 @@ Modelling Topological Phases of Matter
 (TQFT, HQFT, premodular and higher categories, Yetter-Drinfeld and crossed modules in disguise)</a>. Leeds  5-8 July 2016.
 <br>
 <br>
--<a href="http://hsl2017.campus.ciencias.ulisboa.pt/"> Higher Structures Lisbon (deformation theory, operads, higher categories developments & applications)</a>,  24-27 July 2017.
+-<a href="https://arquivo.pt/wayback/20220708104051/https://hsl2017.campus.ciencias.ulisboa.pt/"> Higher Structures Lisbon (deformation theory, operads, higher categories developments & applications)</a>,  24-27 July 2017.
 
 <br>
 <br> 
@@ -89,6 +89,11 @@ href="https://sites.google.com/view/loops-in-leeds/home"> (Leaps through) Loops 
 <br>
 <br>
 -<a href="https://camgsd.tecnico.ulisboa.pt/encontros/tqftmw/2020">Topological Quantum Field Theory thematic sessions: 2020. (Online), July 2020.
+<br>
+<br>
+-<a href="  https://conferences.leeds.ac.uk/artin/"> ARTIN in Leeds: Biracks and Biquandles: Theory, applications, and new perspectives. 16-19 December 2024
+
+
  </td>
 
 
