--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
          <s>Equality</s> Equity, Diversity and Inclusion Lead. <br>
           REF Lead: Pure Mathematics
 <br>
-<br>   &#8226;
+<br>   
 <a href="https://eps.leeds.ac.uk/maths/staff/4021/dr-joao-faria-martins">staff profile</a> of the <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a> at 
            <a href="http://www.leeds.ac.uk/">Leeds</a>.
 
         </td>
-<tr>
+</tr>
 </table>
 
 
@@ -78,7 +78,7 @@
          <b>Miscellaneous</b></br> 
 
          &#8226;  
-         <a href="conferences.html"> Conferences</a>; 
+         <a href="conferences.html"> Conferences organised</a>; 
          &#8226; <a href="publications.html">list of publications</a>;  
          &#8226; <a href="https://conferences.leeds.ac.uk/yamcats/" >Yorkshire and Midlands Category Theory Seminar</a> (YaMCATS)
 
@@ -139,9 +139,10 @@ PI: <a href="EPLMHGT.html"> Emerging Physics From Lattice Models of Higher Gauge
 
  </table>
 
-
-
-<h3 style="margin-left: 10px;c"> Prospective PhD students</h3>
+<table>
+<tr>
+<td>
+<h4 style="margin-left: 10px;c"> Prospective PhD students</h4>
 Do contact me if you are interested in completing a PhD degree at Leeds, in any of my areas of interest. Several projects are possible. Three particular projects are below:
 <ul padding: 50px 3px;>
 <li> <a href=" https://phd.leeds.ac.uk/project/2094-funded-phd-studentship-in-algebra"> Funded PhD Studentship in Algebra</a>. <b> Closing deadline:</b> Friday 28 February 2025. </li>
@@ -161,13 +162,14 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 
 
 
-<h3 style="margin-left: 10px;c">
-  Compiling xymatrix diagrams into HTML using <a href="https://ctan.org/pkg/lwarp">Lwarp</a></h3>
+<h4 style="margin-left: 10px;c">
+  Compiling  <a href="https://ctan.org/pkg/xymatrix?lang=en">xymatrix</a>  diagrams into HTML using <a href="https://ctan.org/pkg/lwarp">Lwarp</a> and <a href="https://github.com/sonoisa/XyJax-v3">XyJax-v3</a> </h4>
+Transform latex notes with several commutative diagrams coded with <a href="https://ctan.org/pkg/xymatrix?lang=en">xymatrix</a> into (reasonably) accessible HTML.
+<br>Comments and suggestions are very welcome.
+
 <ul>
 <li>  <a href=Lwarp-JFM/Sample_Lwarp_Xy-jax-split-index.html>Lwarp with Xy-Jaxv3 (split page version)</a></li> 
-<li>&#8226;  <a href=Lwarp-JFM/Sample_Lwarp_Xy-jax.html>Lwarp with Xy-Jaxv3 (stand alone page version)</a>.</li>
-<dd>Comments and suggestions are very welcome.
-</dd>
+<li> <a href=Lwarp-JFM/Sample_Lwarp_Xy-jax.html>Lwarp with Xy-Jaxv3 (stand alone page version)</a>.</li>
 </ul>
 
 
@@ -189,7 +191,7 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 
 
 
-<h3 style="margin-left: 10px;">Research interests:</h3> 
+<h4 style="margin-left: 10px;">Research interests:</h4> 
 <ul>
 <li> algebraic and geometric topology in dimensions 3 and 4; </li> 
 <li> extended Topological Quantum Field Theories;</li>
@@ -211,7 +213,7 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 
 
 
-<h3 style="margin-left: 10px;">Participation in some grant projects of <a href="https://www.fct.pt/index.phtml.en">FCT (Portugal)</a>:</h3> 
+<h4 style="margin-left: 10px;">Participation in some grant projects of <a href="https://www.fct.pt/index.phtml.en">FCT (Portugal)</a>:</h4> 
 
 <ul>
 
@@ -233,8 +235,9 @@ PTDC/MAT-PUR/31089/2017  </a>, 07/2018 - 06/2022</li>
 </ul>
 
 
-<h3 style="margin-left: 10px;">Mini biography before joining Leeds (dates are approximate):</h3> 
+<h4 style="margin-left: 10px;">Mini biography before joining Leeds (dates are approximate):</h4> 
 <ul>
+<li> 06/2000: Degree in <a href="https://tecnico.ulisboa.pt/en/education/courses/undergraduate-programmes/applied-mathematics-and-computation/">Applied Mathematics and Computation</a>, from <a href="https://tecnico.ulisboa.pt/en/about-tecnico/institutional/presentation/">Instituto Superior Técnico</a>, <a href-"https://www.ulisboa.pt/enUniversity"> of Lisbon. 
 <li> 12/2004: PhD in Mathematics <a href="https://www.nottingham.ac.uk/mathematics/ "> University of Nottingham</a>, supervised by  <a href="https://www.nottingham.ac.uk/mathematics/people/john.barrett">John W. Barrett</a>.</li> 
 <li> 01/2005 - 06/2008: Postoctoral fellow in the <a href="https://math.tecnico.ulisboa.pt/">Mathematics Department</a> of <a href="https://tecnico.ulisboa.pt/en/about-tecnico/institutional/presentation/">Instituto Superior Técnico</a>, <a href-"https://www.ulisboa.pt/enUniversity"> of Lisbon. I was funded by <a href="https://www.fct.pt/"> FCT (Portugal)</a></li>
 <li> 07/2008 - 09/2009: Assistant Researcher, <a href="https://www.cmup.pt/center">Center of Mathematics of University of Oporto</a>, <a href="https://www.up.pt/portal/en/cup/">Faculty of Sciences of University of Oporto</a>. </li>
@@ -269,10 +272,8 @@ P</a>: <a href="https://arxiv.org/abs/2104.02766 ">  Exactly solvable models for
   F</a>, Faria Martins J,
 <a
 href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin
-P</a>:  <a href="https://link.springer.com/article/10.1007/s00220-023-04755-0"> Motion groupoids and mapping class groupoids. </a>. <a href="https://www.springer.com/journal/220"><i>Communications in Mathematical Physics</i></a> 402, 1621–1705 (2023). <a href="https://arxiv.org/abs/2103.10377">Preliminary version. </a>
-
-<dl></dl>
-
+P</a>:  <a href="https://link.springer.com/article/10.1007/s00220-023-04755-0"> Motion groupoids and mapping class groupoids. </a>. <a href="https://www.springer.com/journal/220"><i>Communications in Mathematical Physics</i></a> 402, 1621–1705 (2023). <a href="https://arxiv.org/abs/2103.10377">Preliminary version. </a></li>
+<br>
 <li> <a href="https://celestedamiani.weebly.com/"> Damiani C</a>, <a
 href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin
 P</a>, and  Faria Martins J:
@@ -280,12 +281,8 @@ P</a>, and  Faria Martins J:
 On a canonical lift of Artin's representation to loop braid groups</a>,  
 <a href="https://www.journals.elsevier.com/journal-of-pure-and-applied-algebra "><i>Journal of Pure and Applied Algebra</i></a> Volume 225, Issue 12, December 2021, 106760. 
  <a href="https://eprints.whiterose.ac.uk/173047/">Postprint version</a>. 
-
-
 </li>
-
-<dl></dl>
-
+<br>
 <li> Bullivant A, <a
 href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin
 P</a>, and  Faria Martins J:
@@ -295,70 +292,57 @@ Number 7, Pages: 1685--1769. <a href="https://eprints.whiterose.ac.uk/152198/"> 
 
 </li>
 
-<dl></dl>
 
+<br>
 
 
 <li> Bullivant A,  Cal&ccedilada M, K&aacuted&aacuter Z</a>, <a 
 href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin P</a>, and  Faria Martins J: <a href="https://doi.org/10.1142/S0129055X20500117">Higher lattices, discrete two-dimensional holonomy and topological phases in (3+1) D with higher gauge symmetry</a>. <a href="https://www.worldscientific.com/worldscinet/rmp"><i>Reviews in Mathematical Physics</i></a>, Vol. 32, No. 04, 2050011 (2020) | Research Paper. <a href="https://eprints.whiterose.ac.uk/151859/"
-> Postprint version.</a> <a href="https://arxiv.org/abs/1702.00868"> Earlier version (arXiv:1702.00868 [math-ph])</a>.
+> Postprint version.</a> <a href="https://arxiv.org/abs/1702.00868"> Earlier version (arXiv:1702.00868 [math-ph])</a>.</li>
 
 
+<br>
 
-<dl></dl>
-
-
-<li> Bullivant A,  Cal&ccedilada M, K&aacuted&aacuter Z</a>    and <a 
-href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin P</a>,  Faria Martins J: <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.95.155118#fulltext"> Topological phases from higher gauge symmetry in 
-3+1 dimensions</a>. <a href="https://journals.aps.org/prb/highlights"><i> PHYSICAL REVIEW B</i></a> 95, 155118 (2017). <a href="https://arxiv.org/abs/1606.06639"> Preliminary version. </a>
-
-
-<dl></dl>
 <li> Cirio L.S., Faria Martins J. <a href="https://dx.doi.org/10.4310/ATMP.2017.v21.n1.a3">Categorifying the $sl(2,C)$ Knizhnik-Zamolodchikov Connection via an 
 Infinitesimal 2-Yang-Baxter Operator in the String Lie-2-Algebra</a>. <a href="http://intlpress.com/site/pub/pages/journals/items/atmp/_home/_main/"><i>Advances in Theoretical and Mathematical Physics</i>.</a> Volume 21 (2017)
 Number 1, Pages: 147 - 229
  <a href="http://arxiv.org/abs/1207.1132">
- Preliminary version</a>.
+ Preliminary version</a>.</li>
 
-<dl></dl>
+
+<br>
+
 <li> Faria Martins J.: <a href="http://www.sciencedirect.com/science/article/pii/S0393044015002296" >Crossed modules of Hopf algebras and of associative algebras and two-dimensional holonomy. </a> <a href=" http://www.journals.elsevier.com/journal-of-geometry-and-physics/"><i> Journal of Geometry and Physics</i></a>
 Volume 99, January 2016, Pages 68-110. <a href=" http://arxiv.org/abs/1503.05888"> Preliminary version</a>. </li>
 
-<dl></dl>
-
+<br>
 <li>  Cirio L.S, Faria Martins J.:  <a href="http://www.sciencedirect.com/science/article/pii/S0001870815000900 ">
 Infinitesimal 2-braidings and differential crossed modules,</a>
 <a href="http://www.journals.elsevier.com/advances-in-mathematics/" > <i> Advances in Mathematics</i></a>,  
 Volume 277, 4 June 2015, Pages 426-491. <a href="http://arxiv.org/abs/1309.4070 "> Preliminary version. </a> </li>
 
-
-<dl></dl>
-
+<br>
 
 
 <li>  Cirio L.S, Faria Martins J</a>.: <a href="http://www.sciencedirect.com/science/article/pii/S0926224512000071">
 Categorifying the Knizhnik–Zamolodchikov connection</a>:
 Lucio Simone Cirio</a>, <a href="http://dga.math.muni.cz/"> <i>Differential Geometry and its Applications</i></a>, Volume 30, Issue 3, June 2012, Pages 238–261. <a href="http://arxiv.org/abs/1106.0042"> Preliminary version. </a>
-
-
 </li>
 
-<dl></dl>
-
+<br>
 
 <li> Gohla B.; Faria Martins J.:
 <a href="http://www.sciencedirect.com/science/article/pii/S0001870813003125">Pointed homotopy and pointed lax homotopy of 2-crossed module maps</a>, <a href="http://www.journals.elsevier.com/advances-in-mathematics/"> Advances in Mathematics </a>
 Volume 248, 25 November 2013, Pages 986-1049. <a href="http://arxiv.org/abs/1210.6519">   Preliminary version. </a><a href="http://arxiv.org/abs/1210.6519v2"> Very preliminary version</a> (results proved in a different way).
 </li>
 
-<dl></dl>
 
+<br>
 <li> Faria Martins J, <a href="http://gfm.cii.fc.ul.pt/people/amikovic/"> Mikovic A. </a>:<a href="https://dx.doi.org/10.4310/ATMP.2011.v15.n4.a4">Lie crossed modules and
 gauge-invariant actions for 2-BF theories, </a> <em><a href="http://www.intlpress.com/ATMP/">Advances
 in Theoretical and Mathematical Physics</a></em>, Volume 15, Number 4 (August 2011) p.1059-1084. <a href="http://arxiv.org/abs/1006.0903"> 
 Preliminary version</a> </li>
-
-<dl></dl>
+<br>
 
 <li> Faria Martins J, <a href="http://www.math.ist.utl.pt/%7Erpicken/">Picken R.</a>.: <a href="http://dx.doi.org/10.1016/j.aim.2010.10.017">Surface
 Holonomy for Non-Abelian 2-Bundles via Double Groupoids</a>, 
@@ -366,30 +350,33 @@ Holonomy for Non-Abelian 2-Bundles via Double Groupoids</a>,
 in Mathematics</i></a>
  <a href="http://www.sciencedirect.com/science?_ob=PublicationURL&amp;_tockey=%23TOC%236681%232011%23997739995%232867778%23FLP%23&amp;_cdi=6681&amp;_pubType=J&amp;view=c&amp;_auth=y&amp;_acct=C000050221&amp;_version=1&amp;_urlVersion=0&amp;_userid=10&amp;md5=9fe26d41522d9b694a0293fd167f7d6f">Volume
 226, Issue 4</a>, 1 March 2011, Pages 3309-3366. 
-<a href="http://arxiv.org/abs/0808.3964"> Very preliminary version</a> (the title is different from the published version).
+<a href="http://arxiv.org/abs/0808.3964"> Very preliminary version</a> (the title is different from the published version).</li>
 
 
-<dl></dl>
+<br>
+
 <li> Faria Martins J, <a href="http://www.math.ist.utl.pt/%7Erpicken/">Picken R.</a>.: </i><a href="http://dx.doi.org/10.1016/j.difgeo.2010.10.002">The
 fundamental Gray 3-groupoid of a smooth manifold and local
 3-dimensional holonomy based on a 2-crossed module</a>, <a href="http://dga.math.muni.cz/"><i>Differential
 Geometry and its Applications</i></a>  <a href="http://www.sciencedirect.com/science?_ob=PublicationURL&amp;_tockey=%23TOC%235631%232011%23999709997%232995757%23FLA%23&amp;_cdi=5631&amp;_pubType=J&amp;view=c&amp;_auth=y&amp;_acct=C000050221&amp;_version=1&amp;_urlVersion=0&amp;_userid=10&amp;md5=40cf69570a4a3ed5022e96c5e1984f79">Volume
 29, Issue 2</a>, March 2011, Pages 179-206. <a href="http://arxiv.org/abs/0907.2566"> Very preliminary version</a> (it contains more materials than the published version).  </li>
 
-<dl></dl>
+
+<br>
+
 <li>  Faria Martins J., <a href="http://www.math.ist.utl.pt/%7Erpicken/">Picken R.</a>.<a href="http://www.ams.org/journals/tran/2010-362-11/S0002-9947-2010-04857-3/home.html">On
 Two-Dimensional Holonomy</a>, </a><a href="http://www.ams.org/tran"><i>Transactions of the
 American Mathematical Society</i></a>, 362 (2010), 5657-5695. </li>
 
 
-<dl></dl>
+
+<br>
 <li> Faria Martins J.: <a href="http://www.ams.org/tran/2009-361-09/S0002-9947-09-04576-0/home.html">The
 Fundamental Crossed Module of the Complement of a Knotted Surface.</a>&nbsp;
 <a href="http://www.ams.org/tran"><i>Transactions of the American
 Mathematical Society.</i></a> &nbsp; 361 (2009), 4593-4630. </li>
 
-<dl></dl>
-
+<br>
 <li> Faria Martins J., <a href="https://homepages.math.uic.edu/~kauffman/">Kauffman L.H.</a>:  <a href="http://dx.doi.org/10.1112/S0010437X07003429"> Invariants
 of Welded Virtual Knots Via Crossed Module Invariants of Knotted
 Surfaces</a>, <a href="http://www.compositio.nl/">Compositio
@@ -397,25 +384,26 @@ Mathematica</a>.</i> Volume 144, Issue 04, July 2008, pp
 1046-1080.
 </li>
 
-<dl></dl>
-
+<br>
 <li> Faria Martins J, <a href="http://gfm.cii.fc.ul.pt/people/amikovic/"> Mikovic A.</a>: <a href="https://link.springer.com/article/10.1007/s00220-008-0422-8">Invariants
 of Spin Networks Embedded &nbsp;in Three-Manifolds</a>,&nbsp; <i><a href="http://www.springer.com/west/home?SGWID=4-102-70-1024807-detailsPage=journal%7Cdescription&amp;changeHeader=true&amp;SHORTCUT=www.springer.com/journal/00220/about">Communications
 in Mathematical Physics</a>,</i> Volume &nbsp;279, Number 2/ Abril
 2008, pages 381-399.<br><a href="http://link.aip.org/link/?JMP/48/093508"> </a>
 </li>
-<dl></dl>
+
+
+<br>
 
 <li> Faria Martins J, <a href="https://ncatlab.org/timporter/show/HomePage"> Porter T </a>: <a href="http://www.tac.mta.ca/tac/volumes/18/4/18-04abs.html">On
 Yetter's Invariant and an Extension of the Dijkgraaf-Witten Invariant
 to Categorical Groups</a>,&nbsp; <i><a href="http://www.tac.mta.ca/tac/">Theory and
 Application of Categories</a>,</i> Vol. 18, 2007, No. 4, pp 118-150.</li>
 </ul>
-<br>
 
 
 
-<h3 style="margin-left: 10px;c"> Some selected talk videos </h3>
+
+<h4 style="margin-left: 10px;c"> Some selected talk videos </h4>
 <ul padding: 50px 0px;>
 
 
@@ -457,8 +445,7 @@ Center for Quantum and Topological Systems, NYU Abu Dhabi. <a href="Abudhabi.pdf
 
 </ul>
 
-<br>
-<h3 style="margin-left: 10px;c"> Some selected talk slides </h3>
+<h4 style="margin-left: 10px;c"> Some selected talk slides </h4>
 <ul padding: 50px 0px;>
 <li> 
 <a href="Kabin_JFM.pdf"> Invariants of knots, loop braids and
@@ -468,14 +455,12 @@ knotted surfaces derived from finite
 </li>
 
 
+<br>
 
-
-<dl></dl>
 <li><a href="Oxford_JFM.pdf"> Discrete Hamitonian models for 3+1 D topological phases derived from higher gauge theory </a>, <a href="https://www2.physics.ox.ac.uk/numerical-relativity-overview-and-applications">seminar at</a> <a href="https://www2.physics.ox.ac.uk/research/seminars?date=2019.4"> Department of Physics, University of Oxford.
-</a> (24th April 2019)
+</a> (24th April 2019).</li>
 
-
-<dl></dl>
+<br>
 
 <li><a href="Talk_A&M_JFM.pdf">Topological Phases Derived from
 Discrete Higher Gauge Theory and
@@ -485,8 +470,7 @@ Group</a>, invited talk at</a> <a href="https://iamcs.tamu.edu/quantum-computati
 </li>
 
 
-<dl></dl>
-
+<br>
 
 <li> <a href="Bonn.pdf">Categorifications of the 4-term relations via infinitesimal 2-braidings</a>. <a href="https://www.mpim-bonn.mpg.de/node/5304"> Seminar</a> at the <a href="https://www.mpim-bonn.mpg.de/">Max Plank Institute for Mathematics, Bonn.</a> (7th May 2014)
 
@@ -495,7 +479,9 @@ Group</a>, invited talk at</a> <a href="https://iamcs.tamu.edu/quantum-computati
 
 </ul>
 
-
+</td>
+</tr>
+</table>
 
 <footer>
  <img src="anyonic-loop5.png" style="width: 1800px">
