--- a/publications.html
+++ b/publications.html
@@ -45,18 +45,18 @@
 -->
 
 <td style="padding:5px">
-                <img src="tangle2.png" width=250px>
+                <img src="tangle-transbg.png" width=250px>
                 <figcaption> Anyons moving in 2D space</b></figurecaption>
              </td>
 
 
-      <td style="vertical-align: top; text-align: center;"><img style="width: 310px" alt="" src="HGT3.png">
+      <td style="vertical-align: top; text-align: center;"><img style="width: 310px" alt="" src="HGT3-transbg.png">
 <figcaption>  Surface holonomy along the 	surface &Sigma;</b></figcaption>
 
       </td>
 
 <td style="padding:5px">
-                <img src="Stasheff.png" width=300px>
+                <img src="Stasheff-transbg.png" width=293px>
                 <figcaption>  &nbsp &nbsp &nbsp Stasheff's polytope</figurecaption>
 </figure>
 </td>
@@ -89,7 +89,7 @@ P</a>: <a href="https://arxiv.org/abs/2104.02766 ">  Exactly solvable models for
 
 <br>
 
-<li> Faria Martins J</a>, <a href="https://eps.leeds.ac.uk/maths/staff/4068/professor-frank-nijhoff"> Frank W Nijhoff</a>,  Daniel Riccombeni <a href="https://doi.org/10.1103/PhysRevD.109.L021701"> Darboux-Kadomtsev-Petviashvili system as an integrable Chern-Simons multiform theory in infinite dimensional space
+<li> Faria Martins J</a>, <a href="https://eps.leeds.ac.uk/maths/staff/4068/professor-frank-nijhoff"> Frank W Nijhoff</a>,  Daniel Riccombeni: <a href="https://doi.org/10.1103/PhysRevD.109.L021701"> Darboux-Kadomtsev-Petviashvili system as an integrable Chern-Simons multiform theory in infinite dimensional space
 </a>. <a href=""> <i>  <a href="https://journals.aps.org/prd/"> Physical Review D </i></a> 109, L021701.  	<a href="https://arxiv.org/abs/2305.03182">  Preliminary version.</a></li> 
 <br>
 
@@ -98,7 +98,7 @@ P</a>: <a href="https://arxiv.org/abs/2104.02766 ">  Exactly solvable models for
   F</a>, Faria Martins J,
 <a
 href="https://eps.leeds.ac.uk/maths/staff/4061/professor-paul-martin"> Martin
-P</a>:  <a href="https://link.springer.com/article/10.1007/s00220-023-04755-0"> Motion groupoids and mapping class groupoids. </a>. <a href="https://www.springer.com/journal/220"><i>Communications in Mathematical Physics</i></a> 402, 1621–1705 (2023). <a href="https://arxiv.org/abs/2103.10377">Preliminary version. </a><li>
+P</a>:  <a href="https://link.springer.com/article/10.1007/s00220-023-04755-0"> Motion groupoids and mapping class groupoids. </a>. <a href="https://www.springer.com/journal/220"><i>Communications in Mathematical Physics</i></a> 402, 1621–1705 (2023). <a href="https://arxiv.org/abs/2103.10377">Preliminary version. </a></li>
 
 <br>
 
