--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                  
           <br>
-          Former
+          (Former)
          <s>Equality</s> Equity, Diversity and Inclusion Lead. <br>
           REF Lead: Pure Mathematics
 <br>
@@ -60,8 +60,8 @@
 <h4 style="margin-left: 1px;c">Recent preprints</h4> 
 <ul padding: 50px 0px;> 
 
-<li>  Faria Martins J, <a href="https://ncatlab.org/timporter/show/HomePage"> Porter T </a>: <a href="https://arxiv.org/abs/2301.02491"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from strict omega-groupoids</a>. arXiv:2301.02491 [math.CT].</li>
-
+<li>  Faria Martins J, <a href="https://ncatlab.org/timporter/show/HomePage"> Porter T </a>: <a href="https://arxiv.org/abs/2301.02491"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from strict omega-groupoids</a>. arXiv:2301.02491 [math.CT]. <b>(Updated version  coming soon!)</b></li>
+<br>
 
 <li>  Faria Martins J, <a href="https://en.www.math.fau.de/person/catherine-meusburger/">Meusburger C </a>: <a href="https://arxiv.org/abs/2410.18049"> A geometrical description of untwisted Dijkgraaf-Witten TQFT with defects</a>. arXiv:2410.18049 [math.QA]. </li>
 
@@ -72,7 +72,13 @@
 
 
 <h4 style="margin-left: 10px;c"  > News</h4> 
-<ul> <li> Postdoctoral positions at Leeds (likely) coming soon (Feb 2025):</li>
+<ul> <li> <b>Postdoctoral positions at Leeds!</b>
+<a href="https://jobs.leeds.ac.uk/vacancy.aspx?ref=EPSMA1121">Research Fellow in Pure Mathematics</a>
+<br>
+Closing date: Friday 07 March 2025. Fixed Term (26 months, to end by 31 July 2027). 
+<br> This position is part of our EPSRC <a href="https://gtr.ukri.org/projects?ref=EP%2FW007509%2F1#/tabOverview"> Programme Grant</a>, <a href="https://sites.google.com/view/crt-leeds"> Combinatorial Representation Theory: Discovering the Interfaces of Algebra with Geometry and Topology, 2022-2027.</a>
+</li>
+<br>
  <li>  Workshop recently finished at Leeds:</h4>
    <ul>
    <li>
