--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           REF Lead: Pure Mathematics
 <br>
 <br>   
-<a href="https://eps.leeds.ac.uk/maths/staff/4021/dr-joao-faria-martins">Staff profile</a> of the <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a> at 
+<a href="https://eps.leeds.ac.uk/maths/staff/4021/dr-joao-faria-martins">Staff profile</a> at the <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a> at 
            <a href="http://www.leeds.ac.uk/">Leeds</a>.
 
         </td>
@@ -60,7 +60,7 @@
 <h4 style="margin-left: 1px;c">Recent preprints</h4> 
 <ul padding: 50px 0px;> 
 
-<li>  Faria Martins J, <a href="https://ncatlab.org/timporter/show/HomePage"> Porter T </a>: <a href="https://arxiv.org/abs/2301.02491"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from strict omega-groupoids</a>. arXiv:2301.02491 [math.CT]. <b>(Updated version  coming soon!)</b></li>
+<li>  Faria Martins J, <a href="https://ncatlab.org/timporter/show/HomePage"> Porter T </a>: <a href="https://arxiv.org/abs/2301.02491"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from strict omega-groupoids</a>. arXiv:2301.02491 [math.CT]. <b>(Recently updated.)</b></li>
 <br>
 
 <li>  Faria Martins J, <a href="https://en.www.math.fau.de/person/catherine-meusburger/">Meusburger C </a>: <a href="https://arxiv.org/abs/2410.18049"> A geometrical description of untwisted Dijkgraaf-Witten TQFT with defects</a>. arXiv:2410.18049 [math.QA]. </li>
@@ -164,7 +164,9 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
        </td>
 <td></td>
        <td align="right"> 
-       <img src="Ice.png"  style="right;width:200px"> 
+       <img src="Ice.png"  style="right;width:200px">
+       <figcaption style="text-align:right">
+ Ice patterns. (<a href="https://en.wikipedia.org/wiki/Ilkley_Moor">Ikley Moor</a>.)</figcaption>
        </td>
     </tr>
 
@@ -228,7 +230,8 @@ Quickly compile latex notes containing commutative diagrams coded with <a href="
      </td>
 <td></td>
        <td align="right"> 
-       <img src="tilings.jpeg"  style="right;width:500px"> 
+       <img src="tilings.jpeg"  style="right;width:500px">
+<figcaption style="text-align:right"> Tilings in Ice (<a href="https://en.wikipedia.org/wiki/Menston">Menston).</a> </figcaption> 
        </td>
     </tr>
 
@@ -236,7 +239,7 @@ Quickly compile latex notes containing commutative diagrams coded with <a href="
 <td>
 
  </table>
-<table>
+<table width="100%">
 <tr>
 
 <td>
@@ -251,8 +254,16 @@ Quickly compile latex notes containing commutative diagrams coded with <a href="
 <li> 10/2009 - 09/2016: Assistant Professor, <a href="https://www.dm.fct.unl.pt/en">Department of Mathematics</a>, <a href=https://www.fct.unl.pt/">Nova School of Sciences and Technology</a>. Lisbon (Portugal)
 </li>
 </ul> 
+</td><td></td>
+<td></td>
+       <td align="right"> 
+       <img src="Cobordisms.png"  style="right;width:350px">
+<figcaption style="text-align:right">  A disjoint union of extended cobordisms (<a href="https://en.wikipedia.org/wiki/Lisbon">Lisbon).</a> </figcaption> 
+       </td>
+    </tr>
 
-
+ </table>
+<table>
 
 
 <dl></dl>
