--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <br>
           (Former)
          <s>Equality</s> Equity, Diversity and Inclusion Lead. <br>
-          REF Lead: Pure Mathematics
+          REF (<a href="https://2029.ref.ac.uk/">Research Excellence Framework</a>) Lead: School of Mathematics
 <br>
 <br>   
 <a href="https://eps.leeds.ac.uk/maths/staff/4021/dr-joao-faria-martins">Staff profile</a> at the <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a> at 
@@ -134,11 +134,8 @@ PI: <a href="EPLMHGT.html"> Emerging Physics From Lattice Models of Higher Gauge
 </li>
 </ul>
 <h4 style="margin-left: 1px;c"> Prospective PhD students</h4>
-Do contact me if you are interested in completing a PhD degree at Leeds, in any of my areas of interest. Several projects are possible. Three particular projects are below:
+Do contact me if you are interested in completing a PhD degree at Leeds, in any of my areas of interest. Several projects are possible. Two particular projects are below:
 <ul padding: 50px 3px;>
-<li> <a href=" https://phd.leeds.ac.uk/project/2094-funded-phd-studentship-in-algebra"> Funded PhD Studentship in Algebra</a>. <b> Closing deadline:</b> Friday 28 February 2025. </li>
-
-<br>
 <li> 
 <a href=" https://phd.leeds.ac.uk/project/1864-combinatorial-and-higher-categorical-techniques-in-low-dimensional-topology-and-topological-quantum-field-theory"> Combinatorial and higher-categorical techniques in low dimensional topology and topological quantum field theory
 </a> 
@@ -151,6 +148,7 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 
 </ul>
 
+(Written 3rd December 2025.) There are <b>deadlines soon coming</b> if you want to be eligible for funding. Please contact me (by email) if you want to apply to any of those positions.
 
 
 
@@ -424,6 +422,8 @@ Application of Categories</a>,</i> Vol. 18, 2007, No. 4, pp 118-150.</li>
 <h4 style="margin-left: 10px;c"> Some selected talk videos </h4>
 <ul padding: 50px 0px;>
 
+<li> <a href="https://www.youtube.com/watch?v=u1FF3NJC4Lg"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from discrete higher gauge theory</a>. Invited talk at: <a href="https://www.mpim-bonn.mpg.de/qft25">Twinned workshop on "Quantum Field Theory and Topological Phases via Homotopy Theory and Operator Algebras"</a>, <a href="https://www.mpim-bonn.mpg.de/qft25">CMSA, Harvard/USA</a> and <a href="https://cmsa.fas.harvard.edu/event/mpqft25/">MPIM Bonn/Germany</a>. (Tue, 08 Jul 2025).</li>
+<br>
 
 <li> <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5043/videos/watch/202310231700-FariaMartins.html"> A Lagrange multiform for the Darboux-KP system derived from infinite dimensional Chern-Simons theory</a> Invited talk at: <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5043" >Lagrangian Multiform Theory and Pluri-Lagrangian Systems (23w5043)</a> Hangzhou, China, October 22 to October 27, 2023.</li>
 
