--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 
 </ul>
 
-(Written 3rd December 2025.) There are <b>deadlines soon coming</b> if you want to be eligible for funding. Please contact me (by email) if you want to apply to any of those positions.
+(Written 3rd December 2025.) There are <b>deadlines coming very soon</b> if you want to be eligible to apply for a PhD scholarship from Leeds. Please contact me (by email) if you want to apply to any of these positions. 
 
 
 
@@ -422,7 +422,7 @@ Application of Categories</a>,</i> Vol. 18, 2007, No. 4, pp 118-150.</li>
 <h4 style="margin-left: 10px;c"> Some selected talk videos </h4>
 <ul padding: 50px 0px;>
 
-<li> <a href="https://www.youtube.com/watch?v=u1FF3NJC4Lg"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from discrete higher gauge theory</a>. Invited talk at: <a href="https://www.mpim-bonn.mpg.de/qft25">Twinned workshop on "Quantum Field Theory and Topological Phases via Homotopy Theory and Operator Algebras"</a>, <a href="https://www.mpim-bonn.mpg.de/qft25">CMSA, Harvard/USA</a> and <a href="https://cmsa.fas.harvard.edu/event/mpqft25/">MPIM Bonn/Germany</a>. (Tue, 08 Jul 2025).</li>
+<li> <a href="https://www.youtube.com/watch?v=u1FF3NJC4Lg"> A categorification of Quinn's finite total homotopy TQFT with application to TQFTs and once-extended TQFTs derived from discrete higher gauge theory</a>. Invited talk at: <a href="https://www.mpim-bonn.mpg.de/qft25">Twinned workshop on "Quantum Field Theory and Topological Phases via Homotopy Theory and Operator Algebras"</a>, <a href="https://www.mpim-bonn.mpg.de/qft25">MPIM Bonn/Germany</a> and <a href="https://cmsa.fas.harvard.edu/event/mpqft25/">CMSA, Harvard/USA</a>. (Tue, 08 Jul 2025).</li>
 <br>
 
 <li> <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5043/videos/watch/202310231700-FariaMartins.html"> A Lagrange multiform for the Darboux-KP system derived from infinite dimensional Chern-Simons theory</a> Invited talk at: <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5043" >Lagrangian Multiform Theory and Pluri-Lagrangian Systems (23w5043)</a> Hangzhou, China, October 22 to October 27, 2023.</li>
